--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
 					</div>
 					<div class="container-login100-form-btn m-t-17">
 						<button class="login100-form-btn">
-							<a class="login100-form-btn" href="{{ url_for('register')}}">Register</a>
+							<a class="login100-form-btn" href="{{ url_for('register', sign_type='teacher')}}">Register</a>
 						</button>	
 					</div>
 			</div>
