add support to classes into register

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -186,7 +186,7 @@ iframe {
 /*------------------------------------------------------------------
 [ Input ]*/
 
-.wrap-input100 {
+.wrap-input100, .wrap-input {
   width: 100%;
   position: relative;
   background-color: #e6e6e6;
@@ -196,7 +196,7 @@ iframe {
 
 
 /*---------------------------------------------*/
-.input100 {
+.input100, .input {
   font-family: Ubuntu-Bold;
   color: #403866;
   line-height: 1.2;
@@ -211,7 +211,7 @@ iframe {
 /*------------------------------------------------------------------
 [ Focus Input ]*/
 
-.focus-input100 {
+.focus-input100, .focus-input {
   position: absolute;
   display: block;
   width: calc(100% + 2px);
@@ -237,7 +237,7 @@ iframe {
   transform: scaleX(1.1) scaleY(1.3);
 }
 
-.input100:focus + .focus-input100 {
+.input100:focus + .focus-input100, .input:focus + .focus-input {
   visibility: visible;
   opacity: 1;
 
