--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
 <body>
   {% block content %}{% endblock %}
   <footer>
-    <p style="text-align:center;">Template courtesy: colorlib</p>
+    <p style="text-align:center;">Diário escolar do professor</p>
   </footer>
   <script src="{{ url_for('static', filename='vendor/jquery/jquery-3.2.1.min.js')}}"></script>
   <script src="{{ url_for('static', filename='vendor/animsition/js/animsition.min.js')}}"></script>
