--- a/templates/index.html
+++ b/templates/index.html
@@ -8,12 +8,12 @@
 					</span>
 					<div class="container-login100-form-btn m-t-17">
 						<button class="login100-form-btn">
-							<a class="login100-form-btn" href="{{ url_for('login')}}">Login</a>
+							<a class="login100-form-btn" href="{{ url_for('login')}}">Entrar</a>
 						</button>
 					</div>
 					<div class="container-login100-form-btn m-t-17">
 						<button class="login100-form-btn">
-							<a class="login100-form-btn" href="{{ url_for('register', sign_type='teacher')}}">Register</a>
+							<a class="login100-form-btn" href="{{ url_for('register', sign_type='teacher')}}">Criar conta</a>
 						</button>	
 					</div>
 			</div>
