--- a/templates/home.html
+++ b/templates/home.html
@@ -4,11 +4,16 @@
 		<div class="container-login100">
 			<div class="wrap-login100 p-t-50 p-b-90">
 				<span class="login100-form-title p-b-51">
-					Welcome!!<br>
+          Seja bem vindo professor {{ teacher["name"] }}<br>
 				</span>
+
+        {% for clas in classes %}
+           {{ clas["name"] }} | {{ clas["room"] }}
+        {% endfor %}
+
 				<div class="container-login100-form-btn m-t-17">
 					<button class="login100-form-btn">
-						<a class="login100-form-btn" href="/logout">Logout</a>
+						<a class="login100-form-btn" href="/logout">Sair</a>
 					</button>
 				</div>
 			</div>
