--- a/templates/register.html
+++ b/templates/register.html
@@ -136,7 +136,7 @@
                   <div class="form-check">
                     <input class="form-check-input" type="checkbox" name="id.{{student['_id']}}">
                     <label class="form-check-label" for="id.{{student['_id']}}">
-                      {{ student["name"] }} | {{ student["old"] }} anos de idade | {{ student["class"] if "class" in student else "Sem turma" }}
+                      {{ student["name"] }} | {{ student["old"] }} anos de idade | {{ student["class"]["name"] if "class" in student else "Sem turma" }}
                     </label>
                   </div>
                   {% endfor %}
